Implement animations in splash screen

--- a/app/src/main/res/layout/item_user_adapter.xml
+++ b/app/src/main/res/layout/item_user_adapter.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="17dp"
+    android:layout_margin="5dp"
+    android:background="@drawable/picker_shape_blue"
     android:orientation="horizontal">
 
     <ImageView
