--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:background="#00FFFFFF"
+            android:fontFamily="@font/baloo_chettan"
             android:gravity="center"
             android:hint="Lista de usuarios"
             android:textColor="#fff"
@@ -37,6 +38,8 @@
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="40dp"
+        android:background="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
